SWPWA-1438 - Mobile page layout fix on mobile app
- Fix screen heights.

--- a/src/app/route/CartPage/CartPage.style.scss
+++ b/src/app/route/CartPage/CartPage.style.scss
@@ -18,8 +18,8 @@
 
 .CartPage {
     @include before-desktop {
-        padding-bottom: calc(var(--navigation-tabs-height) + 130px);
-        margin-bottom: 0;
+        padding-bottom: 113px;
+        margin-bottom: var(--navigation-tabs-height);
     }
 
     &-Wrapper {
